# TuckTuck

./: .gitignore  CMakeLists.txt  README.md
Sandbox/: CMakeLists.txt  Makefile  README.md
Sandbox/src/: Sandbox.cpp  etc.cpp
TuckTuck/: CMakeLists.txt  Makefile  README.md
TuckTuck/include/: Application.h  Common.h  EntryPoint.h  EntryPoint.ixx  Logger.h  MACROS.h  TuckTuck.ixx
TuckTuck/include/Events/: Event.h  EventListener.h  EventProducer.h
TuckTuck/include/Input/: InputEvent.h  InputEventListener.h  InputEventProducer.h  InputManager.h
TuckTuck/include/Window/: Window.h  WindowEvent.h  WindowEventListener.h  WindowManager.h
TuckTuck/src/: Application.cpp  EntryPoint.cpp  Logger.cpp  TuckTuck.cpp  glad.c
TuckTuck/src/Events/: EventListener.cpp  EventProducer.cpp
TuckTuck/src/Window/: Window.cpp  WindowEvent.cpp  WindowEventListener.cpp  WindowManager.cpp
